--- a/res/layout/kin_contact_dialog_box.xml
+++ b/res/layout/kin_contact_dialog_box.xml
@@ -7,20 +7,20 @@
         android:id="@+id/kin_Phone_Call"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/drawable"
+        android:background="@drawable/border"
         android:text="@string/phone_call" />
 
     <Button
         android:id="@+id/kin_Send_SMS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/drawable"
+        android:background="@drawable/border"
         android:text="@string/sms" />
 
     <Button
         android:id="@+id/kin_Cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/drawable"
+        android:background="@drawable/border"
         android:text="@string/cancel" />
 </LinearLayout>
