--- a/res/layout/user_contact_dialog_box.xml
+++ b/res/layout/user_contact_dialog_box.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/border"
-        android:text="@string/email_to" />
+        android:text="@string/email" />
     
     <Button
         android:id="@+id/user_Cancel"
