--- a/res/drawable/drawable.xml
+++ b/res/drawable/drawable.xml
@@ -1,13 +1,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:width="0.6dip" 
-     android:color="#33B5E5" />
-    
-   <padding
-       android:left="12dp"
-       android:top="12dp"
-       android:right="12dp"
-       android:bottom="12dp"/>
+    <stroke
+        android:width="0.6dip"
+        android:color="#33B5E5" />
+
+    <padding
+        android:bottom="12dp"
+        android:left="12dp"
+        android:right="12dp"
+        android:top="12dp" />
 
 </shape>
