rename PostNatal.java and AnteNatal.java to PostNatalActivity.java AnteNatalActivity.java

--- a/res/layout/activity_anti_natal.xml
+++ b/res/layout/activity_anti_natal.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="ie.teamchile.smartapp.AntiNatal" >
+    tools:context="ie.teamchile.smartapp.AntiNatalActivity" >
 
     <TextView
         android:layout_width="wrap_content"
