update listView in appointment list

--- a/res/layout/activity_appointment_calendar.xml
+++ b/res/layout/activity_appointment_calendar.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/service_user"
+        android:id="@+id/clinic_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/padding_Xsmall"
