--- a/res/layout/list_rows.xml
+++ b/res/layout/list_rows.xml
@@ -2,16 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-
-   <TextView
-        android:id="@+id/date"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    android:paddingTop="@dimen/padding_small"
+    android:paddingBottom="@dimen/padding_small"
+    android:orientation="horizontal"
+    android:weightSum="3.0" >
 
     <TextView
         android:id="@+id/time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.8"
+        android:gravity="start|center"
+        android:textSize="@dimen/text_small" 
+        android:paddingLeft="@dimen/padding_Xsmall" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.6"
+        android:textSize="@dimen/text_small"
+        android:textAlignment="gravity" />
+
+    <TextView
+        android:id="@+id/gestation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.6"
+        android:gravity="end|center"
+        android:textSize="@dimen/text_small"
+        android:paddingRight="@dimen/padding_small" />
 
 </LinearLayout>
