--- a/res/layout/activity_obstretic_history.xml
+++ b/res/layout/activity_obstretic_history.xml
@@ -46,7 +46,7 @@
             android:paddingTop="@dimen/padding_medium" >
 
             <TextField
-                android:id="@+id/entertext"
+                android:id="@+id/textfor1stdate"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -77,7 +77,7 @@
             android:paddingTop="@dimen/padding_medium" >
 
             <TextField
-                android:id="@+id/entertext1"
+                android:id="@+id/textfor2nddate"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -108,7 +108,7 @@
             android:paddingTop="@dimen/padding_medium" >
 
             <TextField
-                android:id="@+id/entertext2"
+                android:id="@+id/textfor3rddate"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -137,7 +137,7 @@
             android:paddingRight="@dimen/padding_medium" >
 
             <TextField
-                android:id="@+id/entertext3"
+                android:id="@+id/textfor4thdate"
                 android:layout_width="fill_parent"
                 android:layout_height="150dp"
                 android:gravity="center" />
