--- a/res/layout/activity_parity_details.xml
+++ b/res/layout/activity_parity_details.xml
@@ -32,7 +32,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="parity 2+1"
+                android:text="parity x+x"
                 android:textSize="@dimen/text_Xsmall" />
         </LinearLayout>
 
