--- a/res/layout/activity_ante_natal.xml
+++ b/res/layout/activity_ante_natal.xml
@@ -153,6 +153,7 @@
             android:padding="5dip" >
 
             <TextView
+                android:id="@+id/gestation"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text=""
