add sync button in menu that updates local appointment database

--- a/res/menu/main_menu.xml
+++ b/res/menu/main_menu.xml
@@ -5,6 +5,9 @@
         android:title="Logout"/>    
     <item 
         android:id="@+id/menu_item2"
-        android:title="Preferences"/>
+        android:title="Sync"/>
+    <item 
+        android:id="@+id/menu_item3"
+        android:title="Update List"/>
     
 </menu>
