--- a/res/layout/activity_ante_natal.xml
+++ b/res/layout/activity_ante_natal.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/name"
+            android:id="@+id/name_anti_natal"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
